Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
In windows, default arguments are file names. If they include spaces, double quotes are used to surround them so they still work when multiple files are dragged and dropped for instance.
This is broken for the ReactOS shell and one can't easily open files which have spaces in their name or path. For example, opening test.txt (with a double click or right click then open) from the desktop with the default as sublime text will open three empty files called
"c:\Documents"
"and"
"Settings\Administrator\Desktop\test.txt"
Firefox does a similar thing. The arguments must not be surrounded properly (do not test with notepad, which accepts this as it can only open one file at a time anyway).
This was also the same for the "open with" menu, but I was able to fix that pretty easily. Patch attached.
Attachments
Issue Links
- is cloned by
-
CORE-17445 Shell Executions do not work properly when paths include spaces [again]
-
- Resolved
-