[SHELL32] - Quote paths containing spaces when executing shell commands. Patch by Huw Campbell. CORE-7542 #resolve

svn path=/trunk/; revision=60895